# pipery-tooling

./: .gitignore  LICENSE  PLATFORM_RELEASES.md  QUICK_START_TAGGING.md  README.md  TAG_MANAGEMENT.md  pyproject.toml
.github/workflows/: ci.yml  cross-platform-release.yml  pipery-cross-platform-release.yml  pipery-release.yml  pipery-test.yml  test-secrets.yml
catalog-resources/pipery-tooling/: README.md  component.yaml
docs/: GITHUB_ORG_SECRETS.md  ORG_SECRETS_CLI_REFERENCE.md  TOKEN_ROTATION_CHECKLIST.md  WORKFLOW_SECRETS_INTEGRATION.md  cross-platform-sync.md
scripts/: setup-org-secrets.sh  sync-repos-example.sh
src/pipery_tooling/: __init__.py  cli.py  commands.py  config.py  cross_platform_sync.py  release_branches.py  rendering.py  rolling_tag_manager.py  script_inliner.py  tag_manager.py  test_discovery.py  version_parser.py  version_tagger.py
src/pipery_tooling/steps/: cli.py  deploy.py  reintegrate.py  runner.py  sast.py  sca.py  version.py
tests/: test_cli.py  test_cross_platform_sync.py  test_platform_release_branches.py  test_platform_releases.py  test_steps.py  test_tag_manager.py  test_version_tagging.py
